<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_rounded_corner">

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="15dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/dialog_back"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/ibm_plex_sans_medium"
            android:textSize="19sp"
            android:text="@string/dialog_add_transaction"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:padding="8dp"
            android:id="@+id/dialog_save"
            android:textSize="18sp"
            android:textColor="@color/myGreen"
            android:text="@string/dialog_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:boxBackgroundColor="@color/myGreenLight"
        android:textColorHint="@color/myGreen"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/dialog_enter_amount_for_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            android:id="@+id/dialog_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:boxBackgroundColor="@color/myGreenLight"
        android:textColorHint="@color/myGreen"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/dialog_enter_note_for_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/black"
            android:id="@+id/dialog_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        app:boxBackgroundColor="@color/myGreenLight"
        android:hint="@string/dialog_select_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:dropDownHeight="285dp"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/dialog_exp_select_type"
        app:simpleItemLayout="@layout/list_item"
        android:id="@+id/auto_complete_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/dialog_payment_mode"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:checked="true"
            android:id="@+id/dialog_payment_mode_cash"
            android:layout_weight="1"
            android:text="@string/dialog_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/dialog_payment_mode_online"
            android:layout_weight="1"
            android:text="@string/dialog_upi_net_banking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        app:boxBackgroundColor="@color/myGreenLight"
        android:textColorHint="@color/myGreen"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/dialog_select_edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:clickable="false"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:id="@+id/dialog_date"
            android:textColor="@color/black"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

</LinearLayout>