<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/white"
        android:layout_marginVertical="100dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:background="@color/white"
        style="@style/CardView"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:layout_marginTop="15dp"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/signup_message"
        android:textColor="@color/myGreen"
        android:textSize="21sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginBottom="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/black"
        app:boxBackgroundColor="@color/white"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/signup_hint_name"
        android:textColorHint="@color/myGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/black"
            android:id="@+id/signup_text_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginBottom="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/black"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/signup_hint_password"
        android:textColorHint="@color/myGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/black"
            android:id="@+id/signup_text_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginBottom="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/black"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/signup_hint_confirm_password"
        android:textColorHint="@color/myGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/black"
            android:id="@+id/signup_text_confirm_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/signup_button"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        style="@style/CardView.Light"
        android:layout_marginHorizontal="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/poppins"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/signup_already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/already_account"
            style="@style/CardView.Light"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/signup_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>