<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clipChildren="false"
    tools:context=".TransactionsFragment">


    <ScrollView
        android:clipChildren="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/linear_layout_summary"
            android:clipChildren="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:background="@drawable/card_gradient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp"
                android:elevation="15dp"
                app:cardElevation="15dp">

                <LinearLayout
                    android:background="@drawable/card_gradient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <com.google.android.material.textview.MaterialTextView
                        android:textColor="@color/white"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_total_expense"
                        android:textSize="20sp"
                        android:fontFamily="@font/poppins_bold"
                        app:drawableTint="@color/white" />
                    <com.google.android.material.textview.MaterialTextView
                        android:textStyle="bold"
                        android:textColor="@color/myRed"
                        android:layout_marginBottom="10dp"
                        android:id="@+id/total_expense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_8535"
                        android:textSize="18sp"
                        app:drawableTint="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/transactions_card"
                android:layout_marginBottom="15dp"
                android:clipChildren="false"
                android:layout_marginHorizontal="15dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginTop="9dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/ibm_plex_sans_medium"
                    android:text="@string/fragment_last_5_transactions"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/linear_progress_bar"
                    app:trackCornerRadius="4dp"
                    android:layout_marginHorizontal="10dp"
                    android:indeterminate="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="3dp"
                    android:minHeight="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginBottom="20dp"
                    android:id="@+id/fragment_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/recycler_item_view" />
                <com.google.android.material.divider.MaterialDivider
                    android:layout_marginHorizontal="10dp"
                    android:scrollbarSize="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:paddingStart="7dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/fragment_show_more"
                    android:fontFamily="@font/ibm_plex_sans_medium"
                    android:textColor="#0091d5"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/frag_show_all"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/cd_add"
        android:src="@drawable/ic_baseline_add_24" />

</RelativeLayout>